Fixed non-breaking links on mobile browsers

--- a/themes/lisboa-digital/assets/styles/partials/legal.scss
+++ b/themes/lisboa-digital/assets/styles/partials/legal.scss
@@ -35,6 +35,7 @@
         a {
             @include link;
             @include link--primary;
+            @include link--break;
         }
         p {
             padding: rem(16px) 0;
